# tech-interview-prep

./: .gitignore  TASKS.md
.cursor/rules/: general.mdc
django/: pyproject.toml
django/app/: settings.py
q&a/: aws.md  general.md  nextjs.md  observability.md  systems-design.md  testing.md
react/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
react/.cursor/rules/: general.mdc
react/src/: index.css  main.tsx
react/src/hooks/01-useCounter/: useCounter.test.ts
react/src/hooks/02-useDebounce/: DESCRIPTION.md  useDebounce.test.ts  useDebounce.ts  useDebounceSolution.ts
react/src/hooks/useCounter/: DESCRIPTION.md  useCounter.test.ts  useCounter.ts  useCounterSolution.ts
react/src/projects/01-counter/: App.css  App.tsx  DESCRIPTION.md
react/src/projects/02-todo-list/: App.css  App.tsx  AppSolution.tsx  DESCRIPTION.md
react/src/projects/03-form/: App.css  App.tsx  AppSolution.tsx  DESCRIPTION.md
react/src/projects/04-weather-app/: App.css  App.tsx  AppSolution.tsx  DESCRIPTION.md
react/src/projects/05-suspense/: App.css  App.tsx  AppSolution.tsx  DESCRIPTION.md  api.ts  dinosaurs.json
react/src/projects/06-virtual-scroller/: App.css  App.tsx  AppSolution.tsx  DESCRIPTION.md  api.ts
react/src/projects/counter/: App.css  App.tsx  AppSolution.tsx  DESCRIPTION.md
